--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,8 @@ body {
 }
 .popup-align {
   position: fixed;
-  right: 0px;
-  bottom: 0px;
+  right: -2px;
+  bottom: -5px;
   background-color: #00000000;
   padding: 5px;
   border-radius: 0.4rem 0 0 0.4rem;
@@ -40,11 +40,10 @@ body {
     padding: 8px 0;
     position: absolute;
     z-index: 1;
-    bottom: 125%;
+    bottom: 110%;
     left: 50%;
     margin-left: -80px;
   }
-  
   /* Popup arrow */
   .popup .popuptext::after {
     content: "";
@@ -78,3 +77,23 @@ body {
     pointer-events: none !important;
     cursor: default !important;
  }
+
+ .card {
+  position: relative;
+  display: inline-block;
+  box-shadow: none !important;
+}
+.card .img-top {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 99;
+}
+.card:hover .img-top {
+  display: inline;
+}
+
+img {
+  background: #faf9f6;
+}
