--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,105 @@
 body {
   background-color: #faf9f6;
   text-align: center;
-  color: black !important;
+  height: 100%;
+  margin: 0;
 }
-.navbar {
-  background-color: #122145 !important;
+html {
+  box-sizing: border-box;
 }
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+/*homepage styling */
+.fade-in-effect { 
+  animation: fadeIn 7s; 
+}
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+.title-main {
+  font-size:calc(40px + 9vw);
+}
+header {
+  display: block;
+  z-index: 1;
+}
+.hero_area {
+  position: relative;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.hero_area .hero_bg_box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+.hero_area .hero_bg_box img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: right top;
+  object-position: right top;
+}
+.hero_area .hero_bg_box::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(14, 55, 70, 0.9)), to(rgba(14, 55, 70, 0.15)));
+  background: linear-gradient(to right, rgba(14, 55, 70, 0.9), rgba(14, 55, 70, 0.15));
+}
+.sub_page .hero_area {
+  min-height: auto;
+}
+.indextitle-details{
+  color: white;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.navbarlogo-text{
+  font-family: Verdana, sans-serif;
+}
+.navbarlogo-text a {
+  color: #000000;
+  text-decoration: none;
+}
+.container-fluid {
+  display: flex;
+  padding: 0px;
+  flex-direction: column;
+}
+.navigation-wrapper {
+  overflow:auto !important;
+}
+.navigation-buttons {
+  display: block;
+  margin-left: auto;
+  margin-right: 0;
+}
+.navigation-logo {
+  float: left !important;
+}
+
 .form-class {
   width: 30%;
   display: inline-block;
@@ -82,6 +176,7 @@ body {
   position: relative;
   display: inline-block;
   box-shadow: none !important;
+  background-color: #ffffff00;
 }
 .card .img-top {
   display: none;
@@ -95,5 +190,5 @@ body {
 }
 
 img {
-  background: #faf9f6;
+  background: #ffffff00;
 }
