--- a/styles/styles.css
+++ b/styles/styles.css
@@ -206,3 +206,15 @@ img {
   width: 300px;
   height: 300px;
 }
+
+@media only screen and (max-width: 600px) {
+  .onimage {
+    width: 100px;
+    height: 100px;
+  }
+  .offimage{
+    width: 100px;
+    height: 100px;
+  }
+}
+
