--- a/styles/styles.css
+++ b/styles/styles.css
@@ -218,3 +218,13 @@ img {
   }
 }
 
+.sub-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70px;
+  padding-top: 5px;
+  color: black;
+  text-align: center;
+}
+.sub-menu .menu-title {}
