--- a/styles/styles.css
+++ b/styles/styles.css
@@ -232,3 +232,9 @@ img {
 .login-label{
   color: white !important;
 }
+.login-tabs {
+  color: #031e45 !important;
+}
+.form-control {
+ color: white !important;
+}
